# streamlit_exe

./: Dockerfile  main.py  packages.txt  pyproject.toml  read.py  requirements.txt  sub.py
outdated/: sub.py
src/: main.py  show.py  streamlit_deploy_tutorial.py
