[tool.poetry]
name = "streamlit_exe"
version = "0.1.0"
description = ""
authors = ["Tom Mul <t.mul@brightcape.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.3.1"
streamlit-aggrid = "^0.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
